# pyrsia

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  auto_build_pull_20.sh  cargo.toml  code_coverage_docker  docker-bake.hcl  docker-compose.yml  license  namespaces.db  package_types.db  package_versions.db  pre-commit.bat  pre-commit.sh  readme.md  tarpaulin-report.html  test_code_coverage.sh  working.md
.github/: CODEOWNERS  dependabot.yml  license-header-config.json  mlc_config.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature.yaml
.github/license-check/: config.json  header-Apache-2.0.txt
.github/linters/: .markdownlint.yaml
.github/workflows/: any_changed_rust_files.yml  aptly.sh  auto-assign-author.yml  board-automation.yml  build-node-image.yml  build.sh  chartmuseum.sh  delete-pushed-branches.yml  demo.yml  doc-lint.yml  genlisting.py  genlistingsyncoptimized.py  homebrew-installer-upload.sh  homebrew.sh  inclusive-check.yml  (+11 more)
artifact_manager/: Cargo.toml
artifact_manager/src/: artifact_manager.rs
blockchain/: Cargo.toml
blockchain/src/: blockchain.rs
blog/: 2022-01-28-blockchain-consensus.md  2022-01-28-blockchain-consesns.md  2022-06-03-peer-metrics.md  2022-09-24-why-pyrsia-is-being-built-in-rust.md
cli/: Cargo.toml
docs/: cryptographic_key_concept.md  dev_workflow.md  glossary.md  good_pr.md  local_dev_setup.md  readme.md  setup_on_macosx.md  social.mdx
documentstore/: Cargo.toml
installers/: readme.md
node/: Cargo.toml
node/src/: main.rs
pyrsia-client-lib/: .gitignore  Cargo.toml
pyrsia-client-lib/signed_derive/: Cargo.toml
pyrsia-client-lib/signed_derive/src/: lib.rs
pyrsia-client-lib/signed_struct/: Cargo.toml
pyrsia-client-lib/signed_struct/src/: lib.rs
pyrsia-client-lib/signed_struct_test/: Cargo.toml
pyrsia-client-lib/signed_struct_test/src/: lib.rs
pyrsia-client-lib/src/: lib.rs  signed.rs
pyrsia-node/: Cargo.toml  readme.md
pyrsia-node/src/: artifact_manager.rs  blockchain_manager.rs  docker.rs  document_store.rs  hash.rs  http.rs  main.rs  network.rs  server.rs  threading.rs  utils.rs
pyrsia-node/src/docker/: error_util.rs  v2.rs
pyrsia-node/src/docker/v2/: handlers.rs  routes.rs
pyrsia-node/src/docker/v2/handlers/: blobs.rs  manifests.rs
pyrsia-node/src/http/: mod.rs
pyrsia-node/src/network/: behavior.rs  event_loop.rs  transport.rs
pyrsia-node/src/server/: routes.rs  v2.rs
pyrsia-node/src/server/v2/: blobs.rs  manifests.rs
pyrsia-node/src/utils/: error_util.rs  log.rs
pyrsia_central_node/: Cargo.toml
pyrsia_cli/: Cargo.toml  README.md  build.rs  readme.md
pyrsia_cli/src/: cli.rs  cli.yaml  commands.rs  main.rs
pyrsia_cli/src/cli/: handlers.rs  parser.rs
pyrsia_cli/src/commands/: config.rs  node.rs
pyrsia_cli/tests/: inspect_log_artifacts.rs
pyrsia_node/: Cargo.toml  readme.md
pyrsia_node/pyrsia/: p2p_keypair.ser
pyrsia_node/pyrsia-client-lib/src/: signed.rs
pyrsia_node/pyrsia_client_lib/: .gitignore  Cargo.toml
pyrsia_node/pyrsia_client_lib/signed_struct/: Cargo.toml
pyrsia_node/pyrsia_client_lib/signed_struct/src/: lib.rs
pyrsia_node/pyrsia_client_lib/signed_struct/tests/: lib.rs
pyrsia_node/pyrsia_client_lib/signed_struct_test/: Cargo.toml
pyrsia_node/pyrsia_client_lib/src/: iso8601.rs  lib.rs  signed.rs
pyrsia_node/signed_struct/: Cargo.toml
pyrsia_node/signed_struct/src/: lib.rs
pyrsia_node/src/: args.rs  artifact_manager.rs  block_chain.rs  docker.rs  document_store.rs  http.rs  lib.rs  logging.rs  main.rs  metadata_manager.rs  network.rs  node_api.rs  node_manager.rs  signed.rs  utils.rs
pyrsia_node/src/args/: parser.rs
pyrsia_node/src/block_chain/: block.rs  block_chain.rs  lib.rs
pyrsia_node/src/docker/: error_util.rs
pyrsia_node/src/docker/v2/: handlers.rs  routes.rs
pyrsia_node/src/docker/v2/handlers/: blobs.rs  manifests.rs  swarm.rs
pyrsia_node/src/document_store/: document_store.rs
pyrsia_node/src/logging/: headers.rs
pyrsia_node/src/metadata_manager/: metadata.rs
pyrsia_node/src/network/: behavior.rs  client.rs  error.rs  handlers.rs  http.rs  swarm.rs  torrent.rs  transport.rs
pyrsia_node/src/node_api/: handlers.rs  routes.rs
pyrsia_node/src/node_api/handlers/: swarm.rs
pyrsia_node/src/node_manager/: artifact.rs  handlers.rs  model.rs  package.rs
pyrsia_node/src/node_manager/model/: artifact.rs  cli.rs  identity.rs  namespace.rs  package.rs  package_type.rs  package_version.rs
pyrsia_node/src/signed/: algorithms.rs  attestation.rs
pyrsia_node/test_helpers/: Cargo.toml
pyrsia_node/test_helpers/src/: lib.rs
pyrsia_node/tests/: integration_get.rs
pyrsia_node/utilities/: Cargo.toml
signed-struct/: Cargo.toml
src/: artifact_manager.rs  artifact_service.rs  artifacts_repository.rs  block_chain.rs  blockchain_service.rs  build_service.rs  cli_commands.rs  docker.rs  document_store.rs  java.rs  lib.rs  logging.rs  metadata_manager.rs  network.rs  network_central.rs  node_api.rs  node_manager.rs  peer_metrics.rs  readme.md  signed.rs  util.rs  utils.rs
src/blockchain/: Cargo.toml  readme.md
src/blockchain/examples/: simple_node.rs
src/blockchain/src/: args.rs  authority_pen.rs  block.rs  blockchain.rs  crypto.rs  error.rs  header.rs  identities.rs  lib.rs  network.rs  notifier.rs  providers.rs  signature.rs  storage.rs  structures.rs
src/blockchain/src/args/: parser.rs
src/blockchain/src/crypto/: hash_algorithm.rs
src/blockchain/src/identities/: authority_pen.rs  authority_verifier.rs  key_box.rs  verify_key.rs
src/blockchain/src/structures/: block.rs  chain.rs  header.rs  transaction.rs
src/signed/: Cargo.toml  readme.md
src/signed/src/: lib.rs  signed.rs
src/signed_struct/: Cargo.toml  readme.md
src/signed_struct/src/: lib.rs
src/signed_struct/tests/: lib.rs
tests/: code_coverage.Dockerfile  docker-compose-it.yml  integration_get.rs  p2p_keypair_pyrsia1.ser  p2p_keypair_pyrsia2.ser  pyrsia-it-test.sh  pyrsia-it.sh  test_code_coverage.sh  test_local_code_coverage.sh  test_multiple_authorized_nodes.sh
(+235 files in other folders)
