[package]
name = "pyrsia"
readme = "readme.md"
version = "0.1.0"
edition = "2021"
description = "Prysia Node and CLI"
authors = ["pyrsiaoss <pyrsiaopensource@gmail.com>"]
license = "Apache-2"
repository = "https://github.com/pyrsia/pyrsia"

[package.metadata.deb]
assets = [
    ["target/release/pyrsia_node", "usr/bin/", "755"],
    ["target/release/pyrsia", "usr/bin/", "755"],
    ["readme.md", "usr/share/doc/pyrsia/README", "644"]
   ]
section = "devel"
depends = "jq"  # jq is needed to update the /etc/docker/daemon.json file
maintainer-scripts = "installers/debian/"
systemd-units = { unit-name = "pyrsia", unit-scripts = "installers/debian/" }

[dependencies]
pyrsia_blockchain_network = { path = "src/blockchain" }

anyhow = "1.0.65"
async-trait = "0.1.57"
base64 = "0.13.0"
bincode = "1.3.3"
blake3 = "1.2.0"
bytes = "1.2.0"
byte-unit = { version = "4.0.13", default-features = false}
confy = "0.5.0"
ctor = "0.1.21"
clap = { version = "3.2.22", features = ["derive"] }
dirs = "4.0.0"
defaults = "0.2.0"
derive_builder = "0.11.2"
env_logger = "0.9.0"
filename = "0.1.1"
fs_extra = "1.2.0"
futures = "0.3.24"
hex = "0.4.3"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
if-watch = "2.0.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
libp2p = { version = "0.46.1", features=["dns-tokio", "tcp-tokio"]}
log = { version = "0.4.17", features = ["max_level_trace", "release_max_level_trace"] }
maplit = "1.0.2"
multihash = {version = "0.16.0", features = ["serde-codec"]}
num-traits = "0.2.15"
once_cell = "1.15"
pin-utils = "0.1.0"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
serial_test = "0.9.0"
sha2 = { version = "0.10.6" }
stringreader = "0.1.1"
strum = "0.24.1"
strum_macros = "0.24.3"
sysinfo = "0.26.4"
test-log = "0.2.8"
thiserror = "1.0.35"
tokio = { version = "1.21.1", features = [ "macros", "rt-multi-thread", "io-std" ] }
tokio-stream = "0.1.9"
toml = "0.5.9"
url = "2.2.2"
uuid = { version = "1.1.2", features = [ "v4" ] }
warp = { version = "0.3.1", default-features = false }
walkdir = "2.3.2"

[dependencies.error-chain]
version = "0.12"
default-features = false
features = []

[dev-dependencies]
httptest = "0.15.4"
tempfile = "3.2.0"
time = { version = "0.3.15", features = ["formatting", "parsing"] }
tokio-test = "0.4.2"

[workspace]
members = [
    "pyrsia_node",
    "pyrsia_cli",
    "src/blockchain"
]


[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
