[package]
name = "artifact_manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "lib" ]
name = "artifact_manager"
path = "src/artifact_manager.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
blake3 = "1.2.0"
ctor = "0.1.21"
digest = "0.9.0"
env_logger = "0.9.0"
hex = "0.4.3"
log = "0.4.14"
rust-crypto = "0.2.36"
stringreader = "0.1.1"
strum = "0.22.0"
strum_macros = "0.22.0"