[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "lib" ]
name = "blockchain"
path = "../pyrsia-node/src/blockchain_manager.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
x509-parser = "0.12.0"
