[package]
name = "pyrsia_node"
authors = ["Joeri Sykora <joeri@sertik.net>", "Elliott Frisch <elliottf@jfrog.com>", "Chris Mc <christopherm@jfrog.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyrsia = { path = ".." }
signed_struct = { path = "../src/signed_struct" }

clap = { version = "3.0.0-beta.5", features = ["yaml"] }
log = "0.4.14"
pretty_env_logger = "0.4.0"
test-log = "0.2.8"
tokio = { version = "1", features = [ "macros", "rt-multi-thread", "io-std" ] }
warp = { version = "0.3.1", default-features = false }
futures = "0.3.19"
#libp2p = "0.40.0"
libp2p = {git = "https://github.com/decentnetwork/rust-libp2p.git", branch = "fix-compiling-v0.40", features=["tcp-tokio"]}
