[package]
name = "pyrsia-node"
authors = ["Joeri Sykora <joeri@sertik.net>", "Elliott Frisch <elliottf@jfrog.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
futures = "0.3.17"
async-std = {"version"="1.10.0", features=["attributes"]}
clap = "2.33.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
warp = "0.3.1"
#libp2p = "0.40.0"
libp2p = {git = "https://github.com/decentnetwork/rust-libp2p.git", branch = "fix-compiling-v0.40"}