[package]
name = "pyrsia-node"
authors = ["Joeri Sykora <joeri@sertik.net>", "Elliott Frisch <elliottf@jfrog.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
futures = "0.3.17"
async-std = {"version"="1.10.0", features=["attributes"]}
bytes = "1.1.0"
clap = "2.33.0"
easy-hasher = "2.2.1"
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
#libp2p = "0.40.0"
libp2p = {git = "https://github.com/decentnetwork/rust-libp2p.git", branch = "fix-compiling-v0.40"}
uuid = { version = "0.8.2", features = [ "v4" ] }
warp = { version = "0.3.1", default-features = false }
