[package]
name = "pyrsia-node"
authors = ["Joeri Sykora <joeri@sertik.net>", "Elliott Frisch <elliottf@jfrog.com>", "Chris Mc <christopherm@jfrog.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.48"
blake3 = "1.2.0"
env_logger = "0.9.0"
futures = "0.3.17"
bytes = "1.1.0"
clap = "2.33.0"
ctor = "0.1.21"
easy-hasher = "2.2.1"
hex = "0.4.3"
log = "0.4.14"
openssl = "0.10.38"
pretty_env_logger = "0.4.0"
ring = "0.16.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stringreader = "0.1.1"
strum = "0.22.0"
strum_macros = "0.22.0"
tokio = { version = "1", features = [ "macros", "rt-multi-thread", "io-std" ] }
#libp2p = "0.40.0"
libp2p = {git = "https://github.com/decentnetwork/rust-libp2p.git", branch = "fix-compiling-v0.40", features=["tcp-tokio"]}
uuid = { version = "0.8.2", features = [ "v4" ] }
warp = { version = "0.3.1", default-features = false }
sha2 = { version = "0.9.8" }

#[allow(mixed_script_confusables)]
