[package]
name = "pyrsia_cli"
version = "0.2.0"
build = "build.rs"
description = "Decentralized Package Network"
edition = "2021"

[dependencies]
pyrsia = {path=".."}
anyhow = "1.0.66"
clap = { version = "3.2.22", features= ["cargo"] }
confy = "0.5.0"
const_format = "0.2.26"
futures = { version = "0.3.*"}
lazy_static = "1.4.0"
regex = "1.6.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = [ "full"] }
walkdir = "2.3.2"

[[bin]]
name = "pyrsia"
path = "src/main.rs"

[build-dependencies]
anyhow = "1.0"
vergen = "7.4.0"

