[package]
name = "pyrsia_cli"
version = "0.2.5"
build = "build.rs"
description = "Decentralized Package Network"
edition = "2021"

[dependencies]
pyrsia = {path=".."}
anyhow = "1.0.69"
clap = { version = "4.1.4", features = [ "cargo" ] }
confy = "0.5.1"
const_format = "0.2.26"
futures = { version = "0.3.*"}
lazy_static = "1.4.0"
reqwest = { version = "0.11.14", features = ["json", "rustls-tls"], default-features = false}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = [ "full"] }
walkdir = "2.3.2"

[[bin]]
name = "pyrsia"
path = "src/main.rs"

[build-dependencies]
anyhow = "1.0"
vergen = "7.5.0"

