[package]
name = "pyrsia_node"
version = "0.1.0"
description = "Pyrsia Node instance which can connect and participate in the Pyrsia Network with other Nodes"
authors = ["pyrsiaoss <pyrsiaopensource@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyrsia = { path = ".." }
pyrsia_blockchain_network = { path = "../src/blockchain" }

anyhow = "1.0.58"
clap = { version = "3.2.8", features= [ "cargo", "derive" ] }
futures = "0.3.19"
hex = "0.4.3"
libp2p = { version = "0.45.1", features=["dns-tokio", "tcp-tokio"]}
log = "0.4.17"
pretty_env_logger = "0.4.0"
test-log = "0.2.8"
tokio = { version = "1", features = [ "macros", "rt-multi-thread", "io-std" ] }
tokio-stream = "0.1.9"
warp = { version = "0.3.1", default-features = false }
