[package]
name = "signed_struct_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyrsia_client_lib = { path=".."}
serde = { version = "1.0", features = ["derive"] }
signed_struct = { path="../signed_struct"}
