[package]
name = "pyrsia_client_lib"
version = "0.1.0"
edition = "2021"

[lib]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.48"
base64 = "0.13.0"
chrono = { version="0.4.19", default-features = false, features=["clock", "std"] }
env_logger = "0.9.0"
log = "0.4.14"
openssl = "0.10.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
syn = { version = "1.0.82", features = ["derive", "parsing", "extra-traits"]}
