[package]
name = "pyrsia_blockchain_network"
version = "0.1.0"
edition = "2021"

[dependencies]
multihash = {version = "=0.16.0", features = ["serde-codec", "scale-codec"]}
primitive-types = "0.11.1"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
libp2p = { version = "0.44.0", features=["tcp-tokio", "serde"]}
rand = "0.8.5"
tokio = { version = "1.17.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "time"] }
serde_json = "1.0"
once_cell = "1.10"
log = "0.4"
futures = "0.3.19"
ed25519-dalek = { version = "1.0.1", features=["serde"]}
anyhow = "1.0.57"
aleph-bft = "0.12.2"
codec = {package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive"]}
hex = "0.4.3"
async-trait = "0.1.53"
dirs = "4.0.0"
unsigned-varint = "0.7.1"
futures-timer = "3.0.2"

[[example]]
name = "simple_node"

[dev-dependencies]
pretty_env_logger = "0.4.0"
tokio = { version = "1.17.0", features = [ "macros", "rt-multi-thread", "io-std" ] }
