[package]
name = "pyrsia_blockchain_network"
version = "0.2.4"
edition = "2021"

[dependencies]
aleph-bft = "0.8.4"
anyhow = "1.0.68"
async-trait = "0.1.62"
bincode = "1.3.3"
clap = { version = "4.0.32", features = ["derive"] }
codec = {package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive"]}
dirs = "4.0.0"
ed25519-dalek = { version = "1.0.1", features=["serde"]}
futures = "0.3.25"
futures-timer = "3.0.2"
hex = "0.4.3"
libp2p = { version = "0.50.0", features = [ "autonat", "dns", "identify", "floodsub", "gossipsub", "kad", "macros", "mplex", "noise", "request-response", "serde", "tcp", "tokio", "yamux" ]}
log = "0.4"
multihash = {version = "=0.16.0", features = ["serde-codec", "scale-codec"]}
once_cell = "1.17"
primitive-types = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.35"
tokio = { version = "1.24.2", features = ["fs", "io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "time"] }
unsigned-varint = "0.7.1"


[dev-dependencies]
pretty_env_logger = "0.4.0"
tempfile = "3.2.0"
tokio = { version = "1.24.2", features = [ "macros", "rt-multi-thread", "io-std" ] }
