[package]
name = "signed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
base64 = "0.13.0"
proc-macro2 = "1.0"
openssl = "0.10.38"
time = { version = "0.3.6", features = ["formatting", "parsing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
syn = { version = "1.0.89", features = ["derive", "parsing", "extra-traits"]}
log = "0.4.14"
env_logger = "0.9.0"
pretty_env_logger = "0.4.0"

[dev-dependencies]
pyrsia = { path="../.."}
