[package]
name = "signed_struct"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signed = {path="../signed"}

anyhow = "1.0.51"
base64 = "0.13.0"
quote = "1.0"
proc-macro2 = "1.0"
derive_builder = "0.10.2"
detached-jws = "0.2.1"
iso8601 = "0.4.1"
openssl = "0.10.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.73"
serde_jcs = "0.1.0"
syn = { version = "1.0.89", features = ["derive", "parsing", "extra-traits"]}
time = { version = "0.3.5", features= ["std", "formatting", "parsing"] }

log = "0.4.14"
env_logger = "0.9.0"
pretty_env_logger = "0.4.0"

[dev-dependencies]
pyrsia = { path="../.."}
