[package]
name = "signed_struct"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.10.2"
env_logger = "0.9.0"
log = "0.4.14"
proc-macro2 = "1.0"
pyrsia_client_lib = { path = ".." }
quote = "1.0"
syn = { version = "1.0", features = ["full"] }


[dev-dependencies]
anyhow = "1.0.51"
serde = { version = "1.0", features = ["derive"] }
